# rlget

./: .gitignore  Cargo.toml
src/: download.rs  error.rs  lib.rs  main.rs  par.rs  single.rs  utils.rs
src/download/: network.rs  progress.rs
tests/: parse_filename.rs
