[package]
name = "rlget"
version = "0.1.0"
edition = "2024"
authors = ["songrun"]
description = "Parallel downloader"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
reqwest = "0.9.3"
indicatif = "0.12.0"
clap = { version = "4.5.53", features = ["derive"] }
