[package]
name = "rlget"
edition = "2024"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
thiserror = "2.0.17"
color-eyre = "0.6.5"
clap = { version = "4.5.53", features = ["derive", "unicode"] }

tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["full"] }
reqwest = { version = "0.12.28", features = ["stream"] }

indicatif = "0.18.3"
