[package]
name = "rlget"
edition = "2024"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
thiserror = "2.0.17"
color-eyre = "0.6.5"

clap = { version = "4.5.53", features = ["derive", "unicode"] }

compio = { version = "0.17.0", features = ["macros"] }
isahc = "1.7.2"
futures-util = { version = "0.3.31", features = ["io"] }

indicatif = "0.18.3"
